*Improved data traffic on larger multiplayer servers
+Added Hwyla (Waila) support for certain blocks and entities
*Fixed T. Rex skull hitbox glitches